# CICD

./: .dockerignore  .env.example  .gitignore  README.md  SETUP.md  app.py  guardrails.json  main.py  mcp_server.py  pyproject.toml  temp_push.py
.github/: ARCHITECTURE.md  SKILLS.md  copilot-instructions.md
.github/hooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml
src/cicd_orchestrator/: azure_devops.py  cli.py  code_reviewer.py  database.py  github_client.py  guardrails.py  interactive_cli.py  llm_agent.py  mcp_server.py  orchestrator.py  pipeline.py  pipeline_exporter.py  project_detector.py  rag.py  ui.py  workflow.py
src/cicd_orchestrator_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: index.html
tests/: test_orchestrator.py
